--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,8 @@ body {
 }
 
 .body-light-theme {                                    /*****   <--- this class should stay after body for the theme switch to work ****/
-    background-color: #e8effc;
-    color: #624ce0;
+    background-color: #e0e2e9;
+    color: #0d1432;
 }
 
 
@@ -57,6 +57,12 @@ header button i {
     color: #624ce0;
 }
 
+header nav {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+}
+
 header ul {
     display: flex;
 }
@@ -68,18 +74,114 @@ header ul li {
 
 header h1 {
     font-size: 1.6rem;
+    width: 20%;
+}
+
+.btn-ctn {
+    width: 20%;
+    text-align: right;
 }
 
 /************ MAIN ************/
 
 main {
-    height: calc(100vh - 80px);
+    height: calc(120vh - 80px);
+    text-align: center;
+    padding: 30px;
 }
+
+main h2 {
+    margin: 10px 0;
+    font-size: 2rem;
+    opacity: 0;
+    animation: fadeInTilte 1s linear forwards 1s;
+}
+
+
+main > div  {
+    padding: 10px 0;
+    margin-bottom: 30px;
+}
+
+main span {
+    opacity: 0;
+    animation: fadeInTilte 1s linear forwards 1s;
+}
+
+@keyframes fadeInTilte {
+    0% {
+        transform: translateY(-10%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+    
+ }
 
 main > .container {
     height: 80%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
+
+.card {
+    background-color: #1b1c30;
+    height: 400px;
+    width: calc(97% / 3);
+    margin: 10px 0;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation: fadeIn 1s linear forwards 1.7s;
+    opacity: 0;
+}
+
+ @keyframes fadeIn {
+    0% {
+        transform: translateY(-10%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+    
+ }
+
+.card-light-theme {
+    color: #e0e2e9;
+}
+
+.card-top {
+    height: 85%;
+    width: 100%;
+    padding: 10px;
+}
+
+.card-top img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.card-bottom {
+    width: 100%;
+    height: 15%;
+    padding: 0 10px;
+    text-align: center;
+}
+
+.card-bottom h3 {
+    margin-bottom: 5px;
+}
+
+.card-bottom h3 {
+    margin-bottom: 5px;
+}
+
